# gyp-rules

./: .gitignore  README.md  pyproject.toml
rules/npm/: binding_gyp.yar  package_json.yar
src/scanner/: __main__.py  decode.py  models.py  output.py  rules.py  scan.py
tests/: test_binding_gyp_rules.py  test_integration.py  test_package_json_rules.py  test_placeholder.py
tests/fixtures/clean/: binding.gyp  package.json
tests/fixtures/malicious/: binding.gyp  package.json
